[gd_scene load_steps=3 format=3 uid="uid://cley2434hl5cp"]

[ext_resource type="Script" uid="uid://b6ihhels3b1fe" path="res://GameOverScreen.gd" id="1_gk5la"]
[ext_resource type="FontFile" uid="uid://ch2q8fckwhep" path="res://fonts/PressStart2P-Regular.ttf" id="2_51cef"]

[node name="GamerOverScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_gk5la")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_51cef")
theme_override_font_sizes/font_size = 48
text = "Fim de Jogo!"

[node name="FinalScoreLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_51cef")
theme_override_font_sizes/font_size = 22
text = "Pontuação Final: 0"

[node name="RetryButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_51cef")
text = "Jogar Novamente"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_51cef")
text = "Sair do Jogo"
